Fix register, login, refresh
