# assets/swagger/swagger.json
@@ -101,20 +101,20 @@
         }
       }
     },
-    "/refresh/{token}": {
+    "/refresh": {
       "post": {
         "tags": [
           "auth"
         ],
-        "summary": "Refreshes jwt token.",
+        "summary": "Refresh auth token.",
         "operationId": "refresh",
         "parameters": [
           {
-            "type": "string",
-            "description": "refresh token",
-            "name": "token",
-            "in": "path",
-            "required": true
+            "name": "Body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/refreshReq"
+            }
           }
         ],
         "responses": {
@@ -125,7 +125,13 @@
             "$ref": "#/responses/errMsg"
           },
           "401": {
+            "$ref": "#/responses/errMsg"
+          },
+          "403": {
             "$ref": "#/responses/err"
+          },
+          "404": {
+            "$ref": "#/responses/errMsg"
           },
           "500": {
             "$ref": "#/responses/err"
@@ -158,6 +164,16 @@
         },
         "Password": {
           "type": "string"
+        }
+      },
+      "x-go-package": "github.com/noartem/godi-example/pkg/api/auth/transport"
+    },
+    "refreshReq": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string",
+          "x-go-name": "Token"
         }
       },
       "x-go-package": "github.com/noartem/godi-example/pkg/api/auth/transport"
